syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

service Game{
  rpc CreateUserItems(UserItemsInfo)returns(UserItemsInfoResponse);
  //查询用户的金币钻石及道具
  rpc GetUserItemsInfo(UserIDInfo) returns(UserItemsInfoResponse);
  //增加金币
  rpc AddGold(AddGoldRequest) returns(google.protobuf.Empty);
  //增加钻石
  rpc AddDiamond(AddDiamondInfo) returns(google.protobuf.Empty);
  //增加道具(道具类型应该区别)
  rpc AddItem(AddItemInfo) returns(google.protobuf.Empty);
}

message UserItemsInfo{
  uint32 id=1;
  uint32 gold=2;
  uint32 diamond=3;
  uint32 apple=4;
  uint32 banana=5;
}

enum Type{
  Apple=0;
  Banana=1;
}

message UserIDInfo{
  uint32 id=1;
}

message UserItemsInfoResponse{
  uint32 id=1;
  uint32 gold=2;
  uint32 diamond=3;
  //道具
  repeated uint32 items=4;
}

message AddGoldRequest{
  uint32 id=1;
  uint32 count=2;
}

message AddDiamondInfo{
  uint32 id=1;
  uint32 count=2;
}

message AddItemInfo{
  uint32 id=1;
  repeated uint32 items=2;
}
